# ChessVibe

./: .gitignore  Cargo.toml  README.md  activity.md  chess-game-prd.md  plan.md
src/: main.rs
src/engine/: bitboard.rs  board.rs  mod.rs  movegen.rs  types.rs
src/graphics/: renderer.rs
